--- a/config/themes/google_light_theme/google_light_theme.yaml
+++ b/config/themes/google_light_theme/google_light_theme.yaml
@@ -1,4 +1,11 @@
-home_light:
+# Theme based on Google app light theme
+# Creator: Juan - @juanmtech
+# Website: https://www.juanmtech.com
+# YouTube Channel: https://youtube.com/juanmtech
+# My Home Assistant Config files: https://github.com/JuanMTech/Home_Assistant_files
+#
+#
+Google Light Theme:
   # Header:
   app-header-background-color: "#F8F8F8"
   app-header-text-color: "#424242"
