enhance custom header

--- a/config/ui-lovelace.yaml
+++ b/config/ui-lovelace.yaml
@@ -9,6 +9,8 @@ custom_header:
   voice_hide: true
   hide_config: true
   hidden_tab_redirect: false
+  elements_color: var(--primary-text-color);
+  tab_indicator_color: var(--primary-text-color);
   hide_tabs:
     - plants
     - settings
