fix branch name in Github workflow

--- a/.github/workflows/hass-config-check.yml
+++ b/.github/workflows/hass-config-check.yml
@@ -4,10 +4,10 @@ name: hass-config-check
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
   schedule:
     - cron: 0 12 * * *
 
