--- a/config/lovelace/views/04-server.yaml
+++ b/config/lovelace/views/04-server.yaml
@@ -12,7 +12,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -25,7 +25,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -39,7 +39,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -69,7 +69,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -81,7 +81,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
@@ -95,7 +95,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -144,7 +144,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -156,7 +156,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
@@ -170,7 +170,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -194,7 +194,7 @@
                   box-shadow: var(--softui-standard-boxshadow);
                 }
                 .gauge-a {
-                  background-color: var(--paper-card-background-color);
+                  background-color: var(--ha-card-background);
                 }
                 .gauge-b {
                   background-color: var(--primary-background-color);
@@ -216,7 +216,7 @@
                   box-shadow: var(--softui-standard-boxshadow);
                 }
                 .gauge-a {
-                  background-color: var(--paper-card-background-color);
+                  background-color: var(--ha-card-background);
                 }
                 .gauge-b {
                   background-color: var(--primary-background-color);
@@ -238,7 +238,7 @@
                   box-shadow: var(--softui-standard-boxshadow);
                 }
                 .gauge-a {
-                  background-color: var(--paper-card-background-color);
+                  background-color: var(--ha-card-background);
                 }
                 .gauge-b {
                   background-color: var(--primary-background-color);
@@ -248,7 +248,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -262,7 +262,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -318,7 +318,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -333,7 +333,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -346,7 +346,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -360,7 +360,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -385,7 +385,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -398,7 +398,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -411,7 +411,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -425,7 +425,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -456,7 +456,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -468,7 +468,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
@@ -482,7 +482,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -521,7 +521,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -536,7 +536,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -549,7 +549,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -563,7 +563,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -589,7 +589,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -602,7 +602,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -615,7 +615,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -629,7 +629,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -682,7 +682,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -694,7 +694,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
