--- a/config/lovelace/views/03-blinds.yaml
+++ b/config/lovelace/views/03-blinds.yaml
@@ -13,7 +13,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -33,7 +33,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -49,7 +49,7 @@
                   show_name: false
                   style: |
                     ha-card {
-                    --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                     box-shadow: 2px 2px rgba(0,0,0,0.0);
                     }
                   styles:
@@ -101,7 +101,7 @@
                   show_name: false
                   style: |
                     ha-card {
-                    --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                     box-shadow: 2px 2px rgba(0,0,0,0.0);
                     }
                   styles:
@@ -151,7 +151,7 @@
                   show_name: false
                   style: |
                     ha-card {
-                    --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                     box-shadow: 2px 2px rgba(0,0,0,0.0);
                     }
                   styles:
@@ -202,7 +202,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -222,7 +222,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -238,7 +238,7 @@
                   show_name: false
                   style: |
                     ha-card {
-                    --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                     box-shadow: 2px 2px rgba(0,0,0,0.0);
                     }
                   styles:
@@ -290,7 +290,7 @@
                   show_name: false
                   style: |
                     ha-card {
-                    --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                     box-shadow: 2px 2px rgba(0,0,0,0.0);
                     }
                   styles:
@@ -340,7 +340,7 @@
                   show_name: false
                   style: |
                     ha-card {
-                    --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                     box-shadow: 2px 2px rgba(0,0,0,0.0);
                     }
                   styles:
@@ -391,7 +391,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -404,7 +404,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -418,7 +418,7 @@
               show_name: false
               style: |
                 ha-card {
-                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                   box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -446,7 +446,7 @@
               show_name: false
               style: |
                 ha-card {
-                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                   box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -459,7 +459,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
