--- a/config/lovelace/views/06-plants.yaml
+++ b/config/lovelace/views/06-plants.yaml
@@ -13,7 +13,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -26,7 +26,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -40,7 +40,7 @@
         #       show_name: false
         #       style: |
         #         ha-card {
-        #         --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+        #         --ha-card-background: 'rgba(11, 11, 11, 0.00)';
         #         box-shadow: 2px 2px rgba(0,0,0,0.0);
         #         }
         #       styles:
@@ -60,7 +60,7 @@
         #       show_name: false
         #       style: |
         #         ha-card {
-        #         --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+        #         --ha-card-background: 'rgba(11, 11, 11, 0.00)';
         #         box-shadow: 2px 2px rgba(0,0,0,0.0);
         #         }
         #       styles:
@@ -72,7 +72,7 @@
         #   show_name: false
         #   style: |
         #     ha-card {
-        #       --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+        #       --ha-card-background: 'rgba(11, 11, 11, 0.00)';
         #       box-shadow: 2px 2px rgba(0,0,0,0.0);
         #     }
         #   styles:
@@ -86,7 +86,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -106,7 +106,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -118,7 +118,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
