--- a/config/lovelace/views/07-settings.yaml
+++ b/config/lovelace/views/07-settings.yaml
@@ -13,7 +13,7 @@
           style: |
             ha-card {
               height: 20px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
@@ -26,7 +26,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -40,7 +40,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -84,7 +84,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -96,7 +96,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
@@ -110,7 +110,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -125,7 +125,7 @@
                   name: Turn-off time living room
               style: |
                 ha-card {
-                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                   border-radius: 15px;
                   box-shadow: var(--softui-standard-boxshadow);
                 }
@@ -134,7 +134,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -147,7 +147,7 @@
           style: |
             ha-card {
               height: 50px;
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
@@ -161,7 +161,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -182,7 +182,7 @@
                   name: Vacuum on weekends/holidays
               style: |
                 ha-card {
-                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                   border-radius: 15px;
                   box-shadow: var(--softui-standard-boxshadow);
                 }
@@ -191,7 +191,7 @@
               show_name: false
               style: |
                 ha-card {
-                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                 box-shadow: 2px 2px rgba(0,0,0,0.0);
                 }
               styles:
@@ -203,7 +203,7 @@
           show_name: false
           style: |
             ha-card {
-              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
             }
           styles:
