--- a/config/integrations/homekit.yaml
+++ b/config/integrations/homekit.yaml
@@ -27,7 +27,7 @@ filter:
     - media_player.playstation_4
     - sensor.wemosd1_room_humidity
     - sensor.wemosd1_room_temperature
-    - vacuum.robovac
+    - vacuum.roborock
   exclude_entities:
     - cover.living_room_group
     - cover.bed_room_group
@@ -48,5 +48,5 @@ entity_config:
     name: "Temparatur"
   switch.magic_mirror:
     name: "Magic Mirror"
-  vacuum.robovac:
+  vacuum.roborock:
     name: "Staubsauger"
