bring not_secrets up-to-date

--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -1,7 +1,6 @@
 ---
 # redacted secrets file
 
-owm_ak: top1secretapikey
 device1: device_tracker.device_1
 device2: device_tracker.device_2
 dnsip_hostname: example.domain.com
@@ -22,17 +21,16 @@ mqtt_user: username
 mysql_db: mysql://user:password@example.domain.com/database?charset=utf8
 name_1: jim
 notify_ios: notify.some_phone
+owm_ak: top1secretapikey
 path_fail2ban: /tmp/fail2ban.log
 person_1: person.jim
 person_1_id: jim
 person_1_name: Jim
 person_1_uid: jimbo1234567
+phoscon_url: 'https://abc.de'
 proxy_ip: 127.0.0.1
 ps4waker_host: http://127.0.0.1:80
 ps4_ip: 127.0.0.1
-robovac_devid: password
-robovac_ip: 127.0.0.1
-robovac_localkey: password
 router_ip: 127.0.0.1
 router_login: username
 router_ssh: /tmp/sshkey
@@ -40,6 +38,7 @@ rpi_ip: 127.0.0.1
 rpi_shutdown_command: 'touch myass'
 ssl_domain: example.com
 template_1: '{% if states("person.jim") != "home" %}false{% else %}true{% endif %}'
+valetudo_url: 'https://abc.de'
 work1_lat: 17.140005
 work1_long: 19.644145
 workday_country: BR
